# signalpulse-financial-data-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_fix_idempotency_key_uniqueness.py  003_fix_idempotency_key_action_type_scope.py
scripts/: init_db.py  seed_demo.py
src/: __init__.py  config.py  database.py  database_types.py  dependencies.py  main.py
src/api/: __init__.py  actions.py  health.py  ingest.py  market.py  stage0.py
src/features/: __init__.py  calculator.py  funding.py  quality.py  volatility.py
src/ingestion/: __init__.py  base.py  binance.py  bybit.py  exceptions.py  normalizer.py  worker.py
src/middleware/: __init__.py  logging.py  tracing.py  workspace.py
src/models/: __init__.py  alert_delivery.py  data_source.py  derived_signal.py  execution_intent.py  idempotency_key.py  normalized_market_snapshot.py  raw_market_event.py  stage0_decision_log.py  workspace.py
src/schemas/: __init__.py  action.py  common.py  health.py  market.py  signal.py  stage0.py  workspace.py
src/services/: __init__.py  action_service.py  idempotency_service.py  ingest_service.py  market_service.py
src/stage0/: __init__.py  adapter.py  client.py  context.py  exceptions.py  live_adapter.py  mock_adapter.py
src/utils/: __init__.py  logging.py  retry.py  time.py
tests/: __init__.py  conftest.py  factories.py
tests/fail_closed/: __init__.py  test_network_failures.py  test_stage0_failures.py
tests/integration/: test_api_actions.py  test_api_health.py  test_api_market.py
tests/unit/: test_features.py  test_idempotency.py  test_normalizer.py  test_stage0_adapter.py  test_stage0_client.py
